--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,10 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
+
+<LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark">
+
+        <RelativeLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:paddingRight="16dp">
+
+        <ImageButton
+            android:id="@+id/ib_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:background="@drawable/ic_arrow_back_black_24dp" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_open_in_browser_black_24dp"
+                android:layout_marginRight="16dp"
+                android:layout_toLeftOf="@id/ib_flag"/>
+
+        <ImageButton
+            android:id="@+id/ib_flag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_flag_black_24dp"
+            android:layout_alignParentRight="true"/>
+
+        </RelativeLayout>
+    </androidx.appcompat.widget.Toolbar>
 
     <FrameLayout
         android:layout_height="300dp"
@@ -38,12 +80,19 @@
             android:layout_width="wrap_content"
             android:textColor="@color/color_gray"
             android:layout_centerHorizontal="true"
+            android:visibility="gone"
             android:text="paid story"/>
 
         <TextView
             android:id="@+id/tv_title"
             android:layout_below="@id/tv_tag"
             android:maxLines="1"
+            android:textStyle="normal"
+            android:gravity="center"
+            android:textSize="22dp"
+            android:fontFamily="@font/gelasioregular"
+            android:padding="@dimen/cell_padding"
+            android:layout_marginTop="10dp"
             android:layout_centerHorizontal="true"
             style="@style/title_gallery_style"/>
 
@@ -52,6 +101,9 @@
             android:layout_below="@id/tv_title"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:paddingLeft="@dimen/cell_padding"
+            android:paddingRight="@dimen/cell_padding"
+            android:paddingBottom="@dimen/cell_padding"
             android:orientation="horizontal"
             android:layout_centerHorizontal="true">
 
@@ -66,7 +118,7 @@
             <TextView
                 style="@style/info_gallery_style"
                 android:id="@+id/tv_stars"
-                android:layout_marginLeft="5dp"
+                android:layout_marginLeft="10dp"
                 android:gravity="center_vertical"
                 android:layout_weight="1"
                 android:drawableStart="@drawable/ic_action_star"
@@ -75,7 +127,7 @@
             <TextView
                 style="@style/info_gallery_style"
                 android:id="@+id/tv_list"
-                android:layout_marginLeft="5dp"
+                android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:drawableStart="@drawable/ic_action_list"
@@ -87,10 +139,15 @@
             android:id="@+id/tv_description"
             style="@style/desc_gallery_style"
             android:layout_below="@id/ll_stats"
+            android:paddingLeft="@dimen/cell_padding"
+            android:paddingRight="@dimen/cell_padding"
             android:ellipsize="end"
+            android:textColor="#000000"
+            android:textSize="17dp"
+            android:fontFamily="@font/gelasioregular"
             android:justificationMode="inter_word"
             android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,"/>
 
     </RelativeLayout>
-
 </LinearLayout>
+</ScrollView>
