--- a/app/src/main/res/layout/list_item_gallery.xml
+++ b/app/src/main/res/layout/list_item_gallery.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.demoapplication.views.Custom_View xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -73,8 +73,9 @@
         style="@style/desc_gallery_style"
         android:layout_below="@id/ll_stats"
         android:ellipsize="end"
+        android:maxLines="4"
         android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,"/>
 
     </RelativeLayout>
 
-</com.demoapplication.views.Custom_View>
+</LinearLayout>
